--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/styles.css" />
-  <script src="assets/js/layout.js" type="module"></script>
+  <script src="assets/js/layout-index.js" type="module"></script>
 </head>
 
 <body data-page="index">
@@ -33,7 +33,7 @@
 
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
               <a class="btn-yellow" href="login.html">Reserva tu Clase Gratis</a>
-              <a class="btn-white-outline" href="#cursos">Ver Cursos</a>
+              <a class="btn-white-outline" href="#cursos">Ver Servicios</a>
               <a class="btn" href="espanel.html">Ir al Panel</a>
             </div>
 
@@ -68,7 +68,7 @@
 
               <div style="margin-top:12px; display:flex; gap:10px;">
                 <a class="btn-white-outline" href="login.html">🔐 Iniciar sesión</a>
-                <a class="btn-white-outline" href="course.html?level=A1">📚 Ver temas</a>
+                <a class="btn-white-outline" href="services.html?level=A1">📚 Ver temas</a>
               </div>
             </div>
           </div>
@@ -102,73 +102,116 @@
     <div class="container">
 
       <!-- CURSOS -->
-      <section id="cursos" style="margin-top:22px;">
-        <div class="heroBanner" style="padding:18px;">
-          <div class="heroTitleRow">
-            <div class="heroIcon">📚</div>
-            <div style="flex:1">
-              <h2 class="glow-text" style="margin:0; font-family:'Playfair Display',serif; font-weight:900;">Cursos</h2>
-              <div class="subtitle" style="margin-top:6px;">Elige tu nivel y empieza hoy.</div>
-            </div>
-            <a class="btn-white-outline" href="espanel.html">Ir al Panel</a>
-          </div>
-        </div>
-
-        <div style="margin-top:14px; display:grid; grid-template-columns:repeat(3,1fr); gap:16px;">
-          <a class="courseCard" href="course.html?level=A1" style="text-decoration:none; color:inherit;">
-            <div class="card" style="padding:18px; border-radius:24px;">
-              <div style="display:flex; justify-content:space-between; gap:10px; align-items:center;">
-                <span class="pill pill-yellow" style="font-weight:900;">NIVEL A1</span>
-                <span class="pill">Entrar →</span>
-              </div>
-              <div class="courseTitle" style="margin-top:12px; font-family:'Playfair Display',serif; font-weight:900; font-size:28px;">A1 — Principiante</div>
-              <div class="muted" style="margin-top:8px; line-height:1.65;">Empieza desde cero con situaciones reales.</div>
-            </div>
-          </a>
-
-          <a class="courseCard" href="course.html?level=A2" style="text-decoration:none; color:inherit;">
-            <div class="card" style="padding:18px; border-radius:24px;">
-              <div style="display:flex; justify-content:space-between; gap:10px; align-items:center;">
-                <span class="pill pill-yellow" style="font-weight:900;">NIVEL A2</span>
-                <span class="pill">Entrar →</span>
-              </div>
-              <div class="courseTitle" style="margin-top:12px; font-family:'Playfair Display',serif; font-weight:900; font-size:28px;">A2 — Básico</div>
-              <div class="muted" style="margin-top:8px; line-height:1.65;">Refuerza lo esencial y habla con más soltura.</div>
-            </div>
-          </a>
-
-          <a class="courseCard" href="course.html?level=B1" style="text-decoration:none; color:inherit;">
-            <div class="card" style="padding:18px; border-radius:24px;">
-              <div style="display:flex; justify-content:space-between; gap:10px; align-items:center;">
-                <span class="pill pill-blue" style="font-weight:900;">NIVEL B1</span>
-                <span class="pill">Entrar →</span>
-              </div>
-              <div class="courseTitle" style="margin-top:12px; font-family:'Playfair Display',serif; font-weight:900; font-size:28px;">B1 — Intermedio</div>
-              <div class="muted" style="margin-top:8px; line-height:1.65;">Comunicación diaria y trabajo con confianza.</div>
-            </div>
-          </a>
-        </div>
-
-        <div style="margin-top:16px; display:grid; grid-template-columns:1fr; gap:16px;">
-          <a class="courseCard" href="course.html?level=B2" style="text-decoration:none; color:inherit;">
-            <div class="card" style="padding:18px; border-radius:24px; border-left:8px solid var(--red);">
-              <div style="display:flex; justify-content:space-between; gap:10px; align-items:center;">
-                <span class="pill" style="background: rgba(206,17,38,.18); border-color: rgba(206,17,38,.30); font-weight:900;">NIVEL B2</span>
-                <span class="pill">Entrar →</span>
-              </div>
-              <div class="courseTitle" style="margin-top:12px; font-family:'Playfair Display',serif; font-weight:900; font-size:28px;">B2 — Avanzado</div>
-              <div class="muted" style="margin-top:8px; line-height:1.65;">Lenguaje natural, formal y profesional.</div>
-            </div>
-          </a>
-        </div>
-      </section>
-
-      <div class="card" style="margin-top:18px;">
+<div class="card" style="margin-top:18px;">
         <div class="sectionTitle" style="margin-top:0;">📌 Empieza ahora</div>
         <div class="hintSmall">Entra al <b>Panel</b> para activar tu acceso (código o plan) y abrir tu nivel.</div>
       </div>
 
     </div><!-- /container -->
-  </main>
+  
+
+<section id="contact" class="contactSection">
+      <div class="container">
+        <div class="contactHead">
+          <h2>¿Listo para Empezar tu Aventura?</h2>
+          <p>Reserva tu primera clase gratis y descubre cómo puedo ayudarte a dominar el polaco y adaptarte a tu nueva vida en Polonia.</p>
+        </div>
+
+        <div class="contactGrid">
+          <div class="contactList">
+            <div class="contactRow">
+              <div class="contactIcon" aria-hidden="true">
+                <!-- Email icon -->
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4 6.5C4 5.12 5.12 4 6.5 4H17.5C18.88 4 20 5.12 20 6.5V17.5C20 18.88 18.88 20 17.5 20H6.5C5.12 20 4 18.88 4 17.5V6.5Z" stroke="white" stroke-width="1.8" opacity="0.9"/>
+                  <path d="M6.5 7.5L12 11.3L17.5 7.5" stroke="white" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="contactMeta">
+                <div class="contactLabel">Email</div>
+                <div class="contactValue"><a href="mailto:aquivivo.pl@gmail.com" style="color:inherit; text-decoration:none;">aquivivo.pl@gmail.com</a></div>
+              </div>
+            </div>
+
+            <div class="contactRow">
+              <div class="contactIcon" aria-hidden="true">
+                <!-- WhatsApp icon (simple) -->
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 4C7.58 4 4 7.46 4 11.73C4 13.25 4.5 14.67 5.35 15.83L4.5 20L8.82 19.09C9.82 19.6 10.94 19.88 12.13 19.88C16.55 19.88 20.13 16.42 20.13 12.15C20.13 7.88 16.55 4.42 12.13 4.42" stroke="white" stroke-width="1.8" opacity="0.9"/>
+                  <path d="M10 9.8C10.2 9.2 10.7 9 11.2 9.1C11.6 9.2 12 10 12.1 10.3C12.2 10.6 12.2 10.9 12 11.1C11.9 11.3 11.8 11.4 11.7 11.5C12.2 12.4 13 13.1 13.9 13.5C14.1 13.4 14.2 13.3 14.4 13.2C14.7 13 15 13 15.3 13.1C15.6 13.2 16.3 13.6 16.4 13.9C16.5 14.2 16.4 14.6 16.1 14.8C15.6 15.2 15.1 15.5 14.5 15.6C12.7 15.9 9.6 13.2 9.7 10.6C9.7 10.3 9.8 10 10 9.8Z" fill="white" opacity="0.92"/>
+                </svg>
+              </div>
+              <div class="contactMeta">
+                <div class="contactLabel">WhatsApp</div>
+                <div class="contactValue"><a href="https://wa.me/48669697151" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">+48 669 69 71 51</a></div>
+              </div>
+            </div>
+
+            <div class="contactRow">
+              <div class="contactIcon" aria-hidden="true">
+                <!-- Location icon -->
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 21s7-5.2 7-11.1C19 6.1 15.9 3 12 3S5 6.1 5 9.9C5 15.8 12 21 12 21Z" stroke="white" stroke-width="1.8" opacity="0.9"/>
+                  <circle cx="12" cy="10" r="2.6" fill="white" opacity="0.92"/>
+                </svg>
+              </div>
+              <div class="contactMeta">
+                <div class="contactLabel">Ubicación</div>
+                <div class="contactValue">Poznań, Polonia</div>
+              </div>
+            </div>
+
+            <div class="contactRow">
+              <div class="contactIcon" aria-hidden="true">
+                <!-- Instagram icon -->
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect x="5" y="5" width="14" height="14" rx="4" stroke="white" stroke-width="1.8" opacity="0.9"/>
+                  <circle cx="12" cy="12" r="3.2" stroke="white" stroke-width="1.8"/>
+                  <circle cx="16.8" cy="7.2" r="1.1" fill="white"/>
+                </svg>
+              </div>
+              <div class="contactMeta">
+                <div class="contactLabel">Instagram</div>
+                <div class="contactValue"><a href="https://instagram.com/sacariooo" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">@sacariooo</a></div>
+              </div>
+            </div>
+
+            <div class="contactRow">
+              <div class="contactIcon" aria-hidden="true">
+                <!-- TikTok icon (simple) -->
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M14 4c.4 2.7 2.2 4.6 4.8 4.9V11c-1.9-.1-3.5-.8-4.8-2v6.3c0 2.9-2.4 5.2-5.3 5.2S3.4 18.2 3.4 15.3c0-3 2.5-5.3 5.5-5.2v2.7c-1.4-.1-2.6 1-2.7 2.4c-.1 1.4 1 2.6 2.4 2.7c1.5.1 2.8-1.1 2.8-2.6V4h2.6Z" fill="white" opacity="0.92"/>
+                </svg>
+              </div>
+              <div class="contactMeta">
+                <div class="contactLabel">TikTok</div>
+                <div class="contactValue"><a href="https://www.tiktok.com/@latip0l" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">@latip0l</a></div>
+              </div>
+            </div>
+          </div>
+
+          <form class="contactFormCard" action="#" method="post" autocomplete="on">
+            <h3>Envíame un Mensaje</h3>
+
+            <label for="contactEmail">Email<span class="req">*</span></label>
+            <input id="contactEmail" name="email" class="input" type="email" placeholder="tu@email.com" required / autocomplete="email">
+
+            <label for="contactMsg">Mensaje<span class="req">*</span></label>
+            <textarea id="contactMsg" name="message" placeholder="¿En qué puedo ayudarte?" required autocomplete="off"></textarea>
+
+            <div class="contactCheck">
+              <input id="contactPrivacy" type="checkbox" required / name="privacy" autocomplete="off">
+              <label for="contactPrivacy" style="margin:0; font-weight:800;">
+                Acepto la <a href="#" style="color:#003893; font-weight:900;">Política de Privacidad</a><span class="req">*</span>
+              </label>
+            </div>
+
+            <button class="contactBtn" type="submit">Enviar Mensaje</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+</main>
 </body>
 </html>
