--- a/esadmin.html
+++ b/esadmin.html
@@ -317,8 +317,8 @@
 <option value="b1">B1</option>
 <option value="b2">B2</option>
 <option value="premium_a1">Premium A1 (A1+A2)</option>
-<option value="premium_b1">Premium B1 (A1+A2+B1)</option>
-<option value="premium_b2">Premium B2 (A1+A2+B1+B2)</option>
+<option value="premium_b1">Premium B1 (B1+A1)</option>
+<option value="premium_b2">Premium B2 (B2+A1)</option>
 </select>
 <div class="muted" style="font-weight:900; margin-top:12px;">Acceso hasta</div>
 <input class="input" id="um_until" type="datetime-local"/>
