--- a/esadmin.html
+++ b/esadmin.html
@@ -219,11 +219,12 @@
 <option selected="" value="info">info</option>
 <option value="link">link</option>
 <option value="payhip">payhip</option>
+<option value="stripe">stripe</option>
 </select>
 </div>
 <div style="min-width:260px; flex:1;">
-<label class="muted" style="font-weight:900;">CTA url / Payhip code</label>
-<input class="input" id="svcCtaUrl" placeholder="np. qIPXv albo https://..."/>
+<label class="muted" style="font-weight:900;">CTA url / Payhip code (stripe: vacío)</label>
+<input class="input" id="svcCtaUrl" placeholder="link/payhip: https://... lub kod · stripe: zostaw puste"/>
 </div>
 <div style="min-width:180px;">
 <label class="muted" style="font-weight:900;">CTA label</label>
